decaf.output
Grammar

    0 $accept: Program $end

    1 Program: ClassDef ClassDefList

    2 ClassDefList: ClassDef ClassDefList
    3             | /* empty */

    4 VariableDef: Variable PSEP

    5 Variable: Type IDENTIFIER

    6 Type: KINT
    7     | KBOOL
    8     | KSTRING
    9     | KVOID
   10     | KCLASS IDENTIFIER
   11     | Type PLBB PRBB

   12 Formals: Variable VariableList
   13        | /* empty */

   14 VariableList: PCOMMA Variable VariableList
   15             | /* empty */

   16 FunctionDef: KSTATIC Type IDENTIFIER OLB Formals ORB StmtBlock
   17            | Type IDENTIFIER OLB Formals ORB StmtBlock

   18 ClassDef: KCLASS IDENTIFIER KEXTENDS IDENTIFIER PLBBB FieldList PRBBB
   19         | KCLASS IDENTIFIER PLBBB FieldList PRBBB

   20 FieldList: Field FieldList
   21          | /* empty */

   22 Field: VariableDef
   23      | FunctionDef

   24 StmtBlock: PLBBB StmtList PRBBB

   25 StmtList: Stmt StmtList
   26         | /* empty */

   27 Stmt: VariableDef
   28     | SimpleStmt PSEP
   29     | IfStmt
   30     | WhileStmt
   31     | ForStmt
   32     | BreakStmt PSEP
   33     | ReturnStmt PSEP
   34     | PrintStmt PSEP
   35     | StmtBlock

   36 SimpleStmt: LValue OASSIGN Expr
   37           | Call
   38           | /* empty */

   39 LValue: Expr PPOINT IDENTIFIER
   40       | IDENTIFIER
   41       | Expr PLBB Expr PRBB

   42 Call: Expr PPOINT IDENTIFIER OLB Actuals ORB
   43     | IDENTIFIER OLB Actuals ORB

   44 Actuals: Expr ExprList
   45        | /* empty */

   46 ExprList: PCOMMA Expr ExprList
   47         | /* empty */

   48 ForStmt: KFOR OLB SimpleStmt PSEP BoolExpr PSEP SimpleStmt ORB Stmt

   49 WhileStmt: KWHILE OLB BoolExpr ORB Stmt

   50 IfStmt: KIF OLB BoolExpr ORB Stmt KELSE Stmt
   51       | KIF OLB BoolExpr ORB Stmt

   52 ReturnStmt: KRETURN
   53           | KRETURN Expr

   54 BreakStmt: KBREAK

   55 PrintStmt: KPRINT OLB Expr ExprList ORB

   56 BoolExpr: Expr

   57 Expr: Constant
   58     | LValue
   59     | KTHIS
   60     | Call
   61     | OLB Expr ORB
   62     | Expr OADD Expr
   63     | Expr OSUB Expr
   64     | Expr OMUL Expr
   65     | Expr ODIV Expr
   66     | Expr OIDIV Expr
   67     | OSUB Expr
   68     | Expr OLT Expr
   69     | Expr OLE Expr
   70     | Expr OGT Expr
   71     | Expr OGE Expr
   72     | Expr OEQU Expr
   73     | Expr ONE Expr
   74     | Expr OAND Expr
   75     | Expr OOR Expr
   76     | ONOT Expr
   77     | KREADINTEGER OLB ORB
   78     | KREADLINE OLB ORB
   79     | KNEW IDENTIFIER OLB ORB
   80     | KNEW Type PLBB Expr PRBB
   81     | KINSTANCEOF OLB Expr PCOMMA IDENTIFIER ORB
   82     | OLB KCLASS IDENTIFIER ORB Expr

   83 Constant: INTCONST
   84         | BOOLCONST
   85         | STRINGCONST
   86         | KNULL


Terminals, with rules where they appear

$end (0) 0
error (256)
INTCONST (258) 83
BOOLCONST (259) 84
STRINGCONST (260) 85
IDENTIFIER (261) 5 10 16 17 18 19 39 40 42 43 79 81 82
KINT (262) 6
KBOOL (263) 7
KSTRING (264) 8
KVOID (265) 9
KCLASS (266) 10 18 19 82
KSTATIC (267) 16
KEXTENDS (268) 18
KFOR (269) 48
KWHILE (270) 49
KIF (271) 50 51
KELSE (272) 50
KRETURN (273) 52 53
KBREAK (274) 54
KPRINT (275) 55
KTHIS (276) 59
KREADINTEGER (277) 77
KREADLINE (278) 78
KNEW (279) 79 80
KINSTANCEOF (280) 81
KNULL (281) 86
OLB (282) 16 17 42 43 48 49 50 51 55 61 77 78 79 81 82
ORB (283) 16 17 42 43 48 49 50 51 55 61 77 78 79 81 82
OADD (284) 62
OSUB (285) 63 67
OMUL (286) 64
ODIV (287) 65
OIDIV (288) 66
OLT (289) 68
OLE (290) 69
OGT (291) 70
OGE (292) 71
OEQU (293) 72
ONE (294) 73
OAND (295) 74
OOR (296) 75
ONOT (297) 76
OASSIGN (298) 36
PLBB (299) 11 41 80
PRBB (300) 11 41 80
PCOMMA (301) 14 46 81
PLBBB (302) 18 19 24
PRBBB (303) 18 19 24
PSEP (304) 4 28 32 33 34 48
PPOINT (305) 39 42
LOWER_THAN_KELSE (306)


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
Program (53)
    on left: 1, on right: 0
ClassDefList (54)
    on left: 2 3, on right: 1 2
VariableDef (55)
    on left: 4, on right: 22 27
Variable (56)
    on left: 5, on right: 4 12 14
Type (57)
    on left: 6 7 8 9 10 11, on right: 5 11 16 17 80
Formals (58)
    on left: 12 13, on right: 16 17
VariableList (59)
    on left: 14 15, on right: 12 14
FunctionDef (60)
    on left: 16 17, on right: 23
ClassDef (61)
    on left: 18 19, on right: 1 2
FieldList (62)
    on left: 20 21, on right: 18 19 20
Field (63)
    on left: 22 23, on right: 20
StmtBlock (64)
    on left: 24, on right: 16 17 35
StmtList (65)
    on left: 25 26, on right: 24 25
Stmt (66)
    on left: 27 28 29 30 31 32 33 34 35, on right: 25 48 49 50 51
SimpleStmt (67)
    on left: 36 37 38, on right: 28 48
LValue (68)
    on left: 39 40 41, on right: 36 58
Call (69)
    on left: 42 43, on right: 37 60
Actuals (70)
    on left: 44 45, on right: 42 43
ExprList (71)
    on left: 46 47, on right: 44 46 55
ForStmt (72)
    on left: 48, on right: 31
WhileStmt (73)
    on left: 49, on right: 30
IfStmt (74)
    on left: 50 51, on right: 29
ReturnStmt (75)
    on left: 52 53, on right: 33
BreakStmt (76)
    on left: 54, on right: 32
PrintStmt (77)
    on left: 55, on right: 34
BoolExpr (78)
    on left: 56, on right: 48 49 50 51
Expr (79)
    on left: 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74
    75 76 77 78 79 80 81 82, on right: 36 39 41 42 44 46 53 55 56 61
    62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 80 81 82
Constant (80)
    on left: 83 84 85 86, on right: 57


state 0

    0 $accept: . Program $end

    KCLASS  shift, and go to state 1

    Program   go to state 2
    ClassDef  go to state 3


state 1

   18 ClassDef: KCLASS . IDENTIFIER KEXTENDS IDENTIFIER PLBBB FieldList PRBBB
   19         | KCLASS . IDENTIFIER PLBBB FieldList PRBBB

    IDENTIFIER  shift, and go to state 4


state 2

    0 $accept: Program . $end

    $end  shift, and go to state 5


state 3

    1 Program: ClassDef . ClassDefList

    KCLASS  shift, and go to state 1

    $default  reduce using rule 3 (ClassDefList)

    ClassDefList  go to state 6
    ClassDef      go to state 7


state 4

   18 ClassDef: KCLASS IDENTIFIER . KEXTENDS IDENTIFIER PLBBB FieldList PRBBB
   19         | KCLASS IDENTIFIER . PLBBB FieldList PRBBB

    KEXTENDS  shift, and go to state 8
    PLBBB     shift, and go to state 9


state 5

    0 $accept: Program $end .

    $default  accept


state 6

    1 Program: ClassDef ClassDefList .

    $default  reduce using rule 1 (Program)


state 7

    2 ClassDefList: ClassDef . ClassDefList

    KCLASS  shift, and go to state 1

    $default  reduce using rule 3 (ClassDefList)

    ClassDefList  go to state 10
    ClassDef      go to state 7


state 8

   18 ClassDef: KCLASS IDENTIFIER KEXTENDS . IDENTIFIER PLBBB FieldList PRBBB

    IDENTIFIER  shift, and go to state 11


state 9

   19 ClassDef: KCLASS IDENTIFIER PLBBB . FieldList PRBBB

    KINT     shift, and go to state 12
    KBOOL    shift, and go to state 13
    KSTRING  shift, and go to state 14
    KVOID    shift, and go to state 15
    KCLASS   shift, and go to state 16
    KSTATIC  shift, and go to state 17

    $default  reduce using rule 21 (FieldList)

    VariableDef  go to state 18
    Variable     go to state 19
    Type         go to state 20
    FunctionDef  go to state 21
    FieldList    go to state 22
    Field        go to state 23


state 10

    2 ClassDefList: ClassDef ClassDefList .

    $default  reduce using rule 2 (ClassDefList)


state 11

   18 ClassDef: KCLASS IDENTIFIER KEXTENDS IDENTIFIER . PLBBB FieldList PRBBB

    PLBBB  shift, and go to state 24


state 12

    6 Type: KINT .

    $default  reduce using rule 6 (Type)


state 13

    7 Type: KBOOL .

    $default  reduce using rule 7 (Type)


state 14

    8 Type: KSTRING .

    $default  reduce using rule 8 (Type)


state 15

    9 Type: KVOID .

    $default  reduce using rule 9 (Type)


state 16

   10 Type: KCLASS . IDENTIFIER

    IDENTIFIER  shift, and go to state 25


state 17

   16 FunctionDef: KSTATIC . Type IDENTIFIER OLB Formals ORB StmtBlock

    KINT     shift, and go to state 12
    KBOOL    shift, and go to state 13
    KSTRING  shift, and go to state 14
    KVOID    shift, and go to state 15
    KCLASS   shift, and go to state 16

    Type  go to state 26


state 18

   22 Field: VariableDef .

    $default  reduce using rule 22 (Field)


state 19

    4 VariableDef: Variable . PSEP

    PSEP  shift, and go to state 27


state 20

    5 Variable: Type . IDENTIFIER
   11 Type: Type . PLBB PRBB
   17 FunctionDef: Type . IDENTIFIER OLB Formals ORB StmtBlock

    IDENTIFIER  shift, and go to state 28
    PLBB        shift, and go to state 29


state 21

   23 Field: FunctionDef .

    $default  reduce using rule 23 (Field)


state 22

   19 ClassDef: KCLASS IDENTIFIER PLBBB FieldList . PRBBB

    PRBBB  shift, and go to state 30


state 23

   20 FieldList: Field . FieldList

    KINT     shift, and go to state 12
    KBOOL    shift, and go to state 13
    KSTRING  shift, and go to state 14
    KVOID    shift, and go to state 15
    KCLASS   shift, and go to state 16
    KSTATIC  shift, and go to state 17

    $default  reduce using rule 21 (FieldList)

    VariableDef  go to state 18
    Variable     go to state 19
    Type         go to state 20
    FunctionDef  go to state 21
    FieldList    go to state 31
    Field        go to state 23


state 24

   18 ClassDef: KCLASS IDENTIFIER KEXTENDS IDENTIFIER PLBBB . FieldList PRBBB

    KINT     shift, and go to state 12
    KBOOL    shift, and go to state 13
    KSTRING  shift, and go to state 14
    KVOID    shift, and go to state 15
    KCLASS   shift, and go to state 16
    KSTATIC  shift, and go to state 17

    $default  reduce using rule 21 (FieldList)

    VariableDef  go to state 18
    Variable     go to state 19
    Type         go to state 20
    FunctionDef  go to state 21
    FieldList    go to state 32
    Field        go to state 23


state 25

   10 Type: KCLASS IDENTIFIER .

    $default  reduce using rule 10 (Type)


state 26

   11 Type: Type . PLBB PRBB
   16 FunctionDef: KSTATIC Type . IDENTIFIER OLB Formals ORB StmtBlock

    IDENTIFIER  shift, and go to state 33
    PLBB        shift, and go to state 29


state 27

    4 VariableDef: Variable PSEP .

    $default  reduce using rule 4 (VariableDef)


state 28

    5 Variable: Type IDENTIFIER .
   17 FunctionDef: Type IDENTIFIER . OLB Formals ORB StmtBlock

    OLB  shift, and go to state 34

    $default  reduce using rule 5 (Variable)


state 29

   11 Type: Type PLBB . PRBB

    PRBB  shift, and go to state 35


state 30

   19 ClassDef: KCLASS IDENTIFIER PLBBB FieldList PRBBB .

    $default  reduce using rule 19 (ClassDef)


state 31

   20 FieldList: Field FieldList .

    $default  reduce using rule 20 (FieldList)


state 32

   18 ClassDef: KCLASS IDENTIFIER KEXTENDS IDENTIFIER PLBBB FieldList . PRBBB

    PRBBB  shift, and go to state 36


state 33

   16 FunctionDef: KSTATIC Type IDENTIFIER . OLB Formals ORB StmtBlock

    OLB  shift, and go to state 37


state 34

   17 FunctionDef: Type IDENTIFIER OLB . Formals ORB StmtBlock

    KINT     shift, and go to state 12
    KBOOL    shift, and go to state 13
    KSTRING  shift, and go to state 14
    KVOID    shift, and go to state 15
    KCLASS   shift, and go to state 16

    $default  reduce using rule 13 (Formals)

    Variable  go to state 38
    Type      go to state 39
    Formals   go to state 40


state 35

   11 Type: Type PLBB PRBB .

    $default  reduce using rule 11 (Type)


state 36

   18 ClassDef: KCLASS IDENTIFIER KEXTENDS IDENTIFIER PLBBB FieldList PRBBB .

    $default  reduce using rule 18 (ClassDef)


state 37

   16 FunctionDef: KSTATIC Type IDENTIFIER OLB . Formals ORB StmtBlock

    KINT     shift, and go to state 12
    KBOOL    shift, and go to state 13
    KSTRING  shift, and go to state 14
    KVOID    shift, and go to state 15
    KCLASS   shift, and go to state 16

    $default  reduce using rule 13 (Formals)

    Variable  go to state 38
    Type      go to state 39
    Formals   go to state 41


state 38

   12 Formals: Variable . VariableList

    PCOMMA  shift, and go to state 42

    $default  reduce using rule 15 (VariableList)

    VariableList  go to state 43


state 39

    5 Variable: Type . IDENTIFIER
   11 Type: Type . PLBB PRBB

    IDENTIFIER  shift, and go to state 44
    PLBB        shift, and go to state 29


state 40

   17 FunctionDef: Type IDENTIFIER OLB Formals . ORB StmtBlock

    ORB  shift, and go to state 45


state 41

   16 FunctionDef: KSTATIC Type IDENTIFIER OLB Formals . ORB StmtBlock

    ORB  shift, and go to state 46


state 42

   14 VariableList: PCOMMA . Variable VariableList

    KINT     shift, and go to state 12
    KBOOL    shift, and go to state 13
    KSTRING  shift, and go to state 14
    KVOID    shift, and go to state 15
    KCLASS   shift, and go to state 16

    Variable  go to state 47
    Type      go to state 39


state 43

   12 Formals: Variable VariableList .

    $default  reduce using rule 12 (Formals)


state 44

    5 Variable: Type IDENTIFIER .

    $default  reduce using rule 5 (Variable)


state 45

   17 FunctionDef: Type IDENTIFIER OLB Formals ORB . StmtBlock

    PLBBB  shift, and go to state 48

    StmtBlock  go to state 49


state 46

   16 FunctionDef: KSTATIC Type IDENTIFIER OLB Formals ORB . StmtBlock

    PLBBB  shift, and go to state 48

    StmtBlock  go to state 50


state 47

   14 VariableList: PCOMMA Variable . VariableList

    PCOMMA  shift, and go to state 42

    $default  reduce using rule 15 (VariableList)

    VariableList  go to state 51


state 48

   24 StmtBlock: PLBBB . StmtList PRBBB

    INTCONST      shift, and go to state 52
    BOOLCONST     shift, and go to state 53
    STRINGCONST   shift, and go to state 54
    IDENTIFIER    shift, and go to state 55
    KINT          shift, and go to state 12
    KBOOL         shift, and go to state 13
    KSTRING       shift, and go to state 14
    KVOID         shift, and go to state 15
    KCLASS        shift, and go to state 16
    KFOR          shift, and go to state 56
    KWHILE        shift, and go to state 57
    KIF           shift, and go to state 58
    KRETURN       shift, and go to state 59
    KBREAK        shift, and go to state 60
    KPRINT        shift, and go to state 61
    KTHIS         shift, and go to state 62
    KREADINTEGER  shift, and go to state 63
    KREADLINE     shift, and go to state 64
    KNEW          shift, and go to state 65
    KINSTANCEOF   shift, and go to state 66
    KNULL         shift, and go to state 67
    OLB           shift, and go to state 68
    OSUB          shift, and go to state 69
    ONOT          shift, and go to state 70
    PLBBB         shift, and go to state 48

    PSEP      reduce using rule 38 (SimpleStmt)
    $default  reduce using rule 26 (StmtList)

    VariableDef  go to state 71
    Variable     go to state 19
    Type         go to state 39
    StmtBlock    go to state 72
    StmtList     go to state 73
    Stmt         go to state 74
    SimpleStmt   go to state 75
    LValue       go to state 76
    Call         go to state 77
    ForStmt      go to state 78
    WhileStmt    go to state 79
    IfStmt       go to state 80
    ReturnStmt   go to state 81
    BreakStmt    go to state 82
    PrintStmt    go to state 83
    Expr         go to state 84
    Constant     go to state 85


state 49

   17 FunctionDef: Type IDENTIFIER OLB Formals ORB StmtBlock .

    $default  reduce using rule 17 (FunctionDef)


state 50

   16 FunctionDef: KSTATIC Type IDENTIFIER OLB Formals ORB StmtBlock .

    $default  reduce using rule 16 (FunctionDef)


state 51

   14 VariableList: PCOMMA Variable VariableList .

    $default  reduce using rule 14 (VariableList)


state 52

   83 Constant: INTCONST .

    $default  reduce using rule 83 (Constant)


state 53

   84 Constant: BOOLCONST .

    $default  reduce using rule 84 (Constant)


state 54

   85 Constant: STRINGCONST .

    $default  reduce using rule 85 (Constant)


state 55

   40 LValue: IDENTIFIER .
   43 Call: IDENTIFIER . OLB Actuals ORB

    OLB  shift, and go to state 86

    $default  reduce using rule 40 (LValue)


state 56

   48 ForStmt: KFOR . OLB SimpleStmt PSEP BoolExpr PSEP SimpleStmt ORB Stmt

    OLB  shift, and go to state 87


state 57

   49 WhileStmt: KWHILE . OLB BoolExpr ORB Stmt

    OLB  shift, and go to state 88


state 58

   50 IfStmt: KIF . OLB BoolExpr ORB Stmt KELSE Stmt
   51       | KIF . OLB BoolExpr ORB Stmt

    OLB  shift, and go to state 89


state 59

   52 ReturnStmt: KRETURN .
   53           | KRETURN . Expr

    INTCONST      shift, and go to state 52
    BOOLCONST     shift, and go to state 53
    STRINGCONST   shift, and go to state 54
    IDENTIFIER    shift, and go to state 55
    KTHIS         shift, and go to state 62
    KREADINTEGER  shift, and go to state 63
    KREADLINE     shift, and go to state 64
    KNEW          shift, and go to state 65
    KINSTANCEOF   shift, and go to state 66
    KNULL         shift, and go to state 67
    OLB           shift, and go to state 68
    OSUB          shift, and go to state 69
    ONOT          shift, and go to state 70

    $default  reduce using rule 52 (ReturnStmt)

    LValue    go to state 90
    Call      go to state 91
    Expr      go to state 92
    Constant  go to state 85


state 60

   54 BreakStmt: KBREAK .

    $default  reduce using rule 54 (BreakStmt)


state 61

   55 PrintStmt: KPRINT . OLB Expr ExprList ORB

    OLB  shift, and go to state 93


state 62

   59 Expr: KTHIS .

    $default  reduce using rule 59 (Expr)


state 63

   77 Expr: KREADINTEGER . OLB ORB

    OLB  shift, and go to state 94


state 64

   78 Expr: KREADLINE . OLB ORB

    OLB  shift, and go to state 95


state 65

   79 Expr: KNEW . IDENTIFIER OLB ORB
   80     | KNEW . Type PLBB Expr PRBB

    IDENTIFIER  shift, and go to state 96
    KINT        shift, and go to state 12
    KBOOL       shift, and go to state 13
    KSTRING     shift, and go to state 14
    KVOID       shift, and go to state 15
    KCLASS      shift, and go to state 16

    Type  go to state 97


state 66

   81 Expr: KINSTANCEOF . OLB Expr PCOMMA IDENTIFIER ORB

    OLB  shift, and go to state 98


state 67

   86 Constant: KNULL .

    $default  reduce using rule 86 (Constant)


state 68

   61 Expr: OLB . Expr ORB
   82     | OLB . KCLASS IDENTIFIER ORB Expr

    INTCONST      shift, and go to state 52
    BOOLCONST     shift, and go to state 53
    STRINGCONST   shift, and go to state 54
    IDENTIFIER    shift, and go to state 55
    KCLASS        shift, and go to state 99
    KTHIS         shift, and go to state 62
    KREADINTEGER  shift, and go to state 63
    KREADLINE     shift, and go to state 64
    KNEW          shift, and go to state 65
    KINSTANCEOF   shift, and go to state 66
    KNULL         shift, and go to state 67
    OLB           shift, and go to state 68
    OSUB          shift, and go to state 69
    ONOT          shift, and go to state 70

    LValue    go to state 90
    Call      go to state 91
    Expr      go to state 100
    Constant  go to state 85


state 69

   67 Expr: OSUB . Expr

    INTCONST      shift, and go to state 52
    BOOLCONST     shift, and go to state 53
    STRINGCONST   shift, and go to state 54
    IDENTIFIER    shift, and go to state 55
    KTHIS         shift, and go to state 62
    KREADINTEGER  shift, and go to state 63
    KREADLINE     shift, and go to state 64
    KNEW          shift, and go to state 65
    KINSTANCEOF   shift, and go to state 66
    KNULL         shift, and go to state 67
    OLB           shift, and go to state 68
    OSUB          shift, and go to state 69
    ONOT          shift, and go to state 70

    LValue    go to state 90
    Call      go to state 91
    Expr      go to state 101
    Constant  go to state 85


state 70

   76 Expr: ONOT . Expr

    INTCONST      shift, and go to state 52
    BOOLCONST     shift, and go to state 53
    STRINGCONST   shift, and go to state 54
    IDENTIFIER    shift, and go to state 55
    KTHIS         shift, and go to state 62
    KREADINTEGER  shift, and go to state 63
    KREADLINE     shift, and go to state 64
    KNEW          shift, and go to state 65
    KINSTANCEOF   shift, and go to state 66
    KNULL         shift, and go to state 67
    OLB           shift, and go to state 68
    OSUB          shift, and go to state 69
    ONOT          shift, and go to state 70

    LValue    go to state 90
    Call      go to state 91
    Expr      go to state 102
    Constant  go to state 85


state 71

   27 Stmt: VariableDef .

    $default  reduce using rule 27 (Stmt)


state 72

   35 Stmt: StmtBlock .

    $default  reduce using rule 35 (Stmt)


state 73

   24 StmtBlock: PLBBB StmtList . PRBBB

    PRBBB  shift, and go to state 103


state 74

   25 StmtList: Stmt . StmtList

    INTCONST      shift, and go to state 52
    BOOLCONST     shift, and go to state 53
    STRINGCONST   shift, and go to state 54
    IDENTIFIER    shift, and go to state 55
    KINT          shift, and go to state 12
    KBOOL         shift, and go to state 13
    KSTRING       shift, and go to state 14
    KVOID         shift, and go to state 15
    KCLASS        shift, and go to state 16
    KFOR          shift, and go to state 56
    KWHILE        shift, and go to state 57
    KIF           shift, and go to state 58
    KRETURN       shift, and go to state 59
    KBREAK        shift, and go to state 60
    KPRINT        shift, and go to state 61
    KTHIS         shift, and go to state 62
    KREADINTEGER  shift, and go to state 63
    KREADLINE     shift, and go to state 64
    KNEW          shift, and go to state 65
    KINSTANCEOF   shift, and go to state 66
    KNULL         shift, and go to state 67
    OLB           shift, and go to state 68
    OSUB          shift, and go to state 69
    ONOT          shift, and go to state 70
    PLBBB         shift, and go to state 48

    PSEP      reduce using rule 38 (SimpleStmt)
    $default  reduce using rule 26 (StmtList)
